--- a/back/package.json
+++ b/back/package.json
@@ -24,10 +24,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
+    "@types/multer": "^1.4.7",
     "chatgpt": "^5.2.2",
     "dotenv": "^16.0.3",
+    "nest-csv-parser": "^2.0.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
